HW3: switch to kubernetes + ollama (#3)

--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -1,13 +1,15 @@
 services:
   web:
-    build: ./web
+    build: ../web
     image: llm-chatbot
     ports:
-      - "8050:8050"
+      - "8051:8050"
     models:
       - llm
     extra_hosts:
       - "model-runner.docker.internal:host-gateway"
+    environment:
+    - LLM_BASE_URL=${LLM_BASE_URL}
 
 models:
   llm:
